syntax = "proto3";

package auth_api;

option go_package = "sebastianbaiju.com/product-manage/auth;pb_auth";

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}


service AuthenticationService {
    rpc Login(LoginRequest) returns (LoginResponse);
}